# collector

./: .dockerignore  .env.example  Dockerfile  README.md  aliyun_captcha.py  collector.py  crypto.py  gw_sign.py  main.py  pyproject.toml  send_sms_browser.py  server  server.py
.superpowers/sdd/: task-6-report.md
docs/superpowers/plans/: 2026-07-13-yc-java-sdk.md  2026-07-15-yc-login-by-sms.md
docs/superpowers/specs/: 2026-07-13-yc-java-sdk-design.md  2026-07-15-yc-login-by-sms-design.md
java-sdk/: README.md  pom.xml
java-sdk/src/main/java/com/j/soul/yc/: YcClient.java  YcClientBuilder.java
java-sdk/src/main/java/com/j/soul/yc/batch/: SmsBatchReport.java  SmsTaskResult.java  YcSmsBatchExecutor.java
java-sdk/src/main/java/com/j/soul/yc/captcha/: CaptchaProvider.java  CaptchaResult.java
java-sdk/src/main/java/com/j/soul/yc/config/: YcClientConfig.java
java-sdk/src/main/java/com/j/soul/yc/crypto/: CrytoLogin.java
java-sdk/src/main/java/com/j/soul/yc/exception/: YcException.java  YcStep.java
java-sdk/src/main/java/com/j/soul/yc/http/: Curl4jTransport.java  HttpRequest.java  HttpResponse.java  HttpTransport.java  OkHttpTransport.java  TransportType.java
java-sdk/src/main/java/com/j/soul/yc/model/: ApiResult.java  ReplaceMobileRequest.java  SmsPathType.java
java-sdk/src/main/resources/aliyun/: sample_deflate_b64.txt  transform_table.json
java-sdk/src/main/resources/aliyun/js/: bootstrap_env.js
java-sdk/src/test/java/com/j/soul/yc/: LiveSendSmsIT.java  YcClientTest.java
java-sdk/src/test/resources/: aliyun_transform_vector.json
(+31 files in other folders)
