[project]
name = "python-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi>=0.139.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "uvicorn>=0.50.0",
]
